# tableau-colormap

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: funding.yml
.github/workflows/: pypi_publish.yml
tableau_colormap/: __init__.py
